added new model

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,14 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/units/settler.blend1.meta
+Assets/units/settler.blend1.meta
+Assets/units/settler.blend1
+Assets/units/settler.blend.meta
+Assets/units/settler.blend
+Assets/units/woodchopper.blend1
+Assets/units/woodchopper.blend1.meta
+Assets/units/woodchopper.blend.meta
+Assets/units/woodchopper.blend
+Assets/units/settler.blend1.meta
+Assets/units/settler.blend1
